# dafs

./: .gitignore  .gitmodules  .hgignore  AUTHORS  CMakeLists.txt  Dockerfile  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
.devcontainer/: Dockerfile  devcontainer.json
examples/: example.fa  hemoglobin.fa
src/: CMakeLists.txt  Makefile.am  Makefile.in  alifold.cpp  alifold.h  align.cpp  align.h  alignment_graph.cpp  alignment_graph.h  boltzmann_param.c  cmdline.c  cmdline.h  dafs.cpp  dafs.ggo  dmsa.cpp  dusaf.cpp  dusaf.ggo  fa.cpp  fa.h  fold.cpp  fold.h  gradient_method.cpp  gradient_method.h  graph_library.cpp  graph_library.h  ip.cpp  ip.h  ipknot.cpp  ipknot.h  needleman_wunsch.cpp  needleman_wunsch.h  nussinov.cpp  nussinov.h  tree.cpp  typedefs.h
src/contrafold/: CMakeLists.txt  InferenceEngine.ipp  Makefile.in  wrapper.cpp
src/contralign/: CMakeLists.txt  Config.hpp  Defaults.ipp  InferenceEngine.hpp  InferenceEngine.ipp  LogSpace.hpp  Makefile.in  MultiSequence.cpp  MultiSequence.hpp  ParameterManager.hpp  ParameterManager.ipp  Sequence.cpp  Sequence.hpp  SparseMatrix.hpp  SparseMatrix.ipp  Utilities.cpp  Utilities.hpp  Utilities.ipp  wrapper.cpp
src/contralignRNA/: CMakeLists.txt  contralign.h
src/probcons/: CMakeLists.txt  Defaults.h  FileBuffer.h  MultiSequence.h  ProbabilisticModel.h  SafeVector.h  ScoreType.h  Sequence.h  SparseMatrix.h  probcons.h
src/probconsRNA/: CMakeLists.txt  Defaults.h  FileBuffer.h  Makefile.in  MultiSequence.h  ProbabilisticModel.h  SafeVector.h  ScoreType.h  Sequence.h  SparseMatrix.h
trunk/: configure.ac
trunk/src/: Makefile.am  align.cpp  align.h  dusaf.cpp  dusaf.ggo  fa.cpp  fa.h  fold.cpp  fold.h  ip.cpp  ip.h  new_param.c  tree.h  typedefs.h
trunk/src/contralign/: Makefile.am
trunk/src/partalign/: Makefile.am  log_value.h  optimizer.cpp  pa_train.cpp  partalign.cpp
